// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMap renders correctly with props and a list of one 1`] = `
<div
  center={
    {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    {
      "height": "100px",
    }
  }
  options={
    {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={true}
    onClick={[Function]}
    position={
      {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
</div>
`;

exports[`GoogleMap renders correctly with props and a list of one 2`] = `
<div
  center={
    {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    {
      "height": "100px",
    }
  }
  options={
    {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={true}
    onClick={[Function]}
    position={
      {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
  <div
    className="mock-info-window"
    onCloseClick={[Function]}
    options={
      {
        "maxWidth": 200,
      }
    }
    position={
      {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
  >
    <a
      href="/picture/uid-bar"
    >
      <h1>
        title1
      </h1>
      <picture>
        <img
          alt="title1"
          css={
            {
              "map": undefined,
              "name": "m2yydh",
              "next": undefined,
              "styles": "
	padding-top: 66.73913043478261%;
",
              "toString": [Function],
            }
          }
          height={110}
          image={
            {
              "layout": "CONSTRAINED",
            }
          }
          width={164}
        />
      </picture>
    </a>
  </div>
</div>
`;

exports[`GoogleMap renders correctly with props and a list of two 1`] = `
<div
  center={
    {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    {
      "height": "100px",
    }
  }
  options={
    {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={false}
    onClick={[Function]}
    position={
      {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
  <div
    className="mock-marker"
    clickable={false}
    onClick={[Function]}
    position={
      {
        "lat": 52.456,
        "lng": 13.456,
      }
    }
    title="title2"
  />
</div>
`;

exports[`GoogleMap renders correctly with props and a list of zero 1`] = `
<div
  center={
    {
      "lat": 52.473092,
      "lng": 13.327628,
    }
  }
  className="mock-google-map"
  mapContainerStyle={
    {
      "height": "100px",
    }
  }
  options={
    {
      "mapId": "map-id",
      "streetViewControl": false,
    }
  }
  zoom={1}
>
  <div
    className="mock-marker"
    clickable={false}
    onClick={[Function]}
    position={
      {
        "lat": 52.123,
        "lng": 13.123,
      }
    }
    title="title1"
  />
</div>
`;
